Setup recursion circuit using riscvm

--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -9,6 +9,7 @@ members = [
   "digital-signature/core",
   "ecdsa",
   "hello-world",
+  "hello-recursion",
   "json",
   "json/core",
   "password-checker",
